# string_lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
includes/: string.h
sources/: string.c
tests/: test_proj.cpp
